fetch size from an enum type

Do not assume that an enum is returned as a long; treat it as an int if
the type indicates that its size is that of an int.

http://bugzilla.gnome.org/show_bug.cgi?id=646581